<resources>
    <!-- NOMBRE DE LA APLICACIÓN -->
    <string name="app_name">Control Mantenimiento</string>

    <!-- GUARDAR PREFERENCIAS-->
    <string name="prefs_file">com.adrianbl.mantenimiento_control.PREFERENCE_FILE_KEY</string>

    <!-- TEXTOS -->
    <string name="password">Contraseña</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="lista_de_incidencias">Lista de Incidencias</string>
    <string name="registrar_incidencia">Registrar Incidencia</string>
    <string name="provider">provider</string>
    <string name="correo">correo</string>
    <string name="perfil">Perfil</string>
    <string name="panel_principal">Panel Principal</string>
    <string name="horario_de_salida">Horario de salida</string>
    <string name="horario_de_entrada">Horario de entrada</string>
    <string name="datos_de_trabajo">Datos de trabajo</string>
    <string name="tel_fono">Teléfono</string>
    <string name="direcci_n">Dirección</string>
    <string name="datos_b_sicos">Datos básicos</string>
    <string name="asigna_o_modifica_datos">Asigna o modifica los datos</string>
    <string name="obtener_datos">Obtener datos</string>
    <string name="selecciona_un_usuario">Selecciona un usuario</string>
    <string name="funciones_administraci_n_de_usuarios_y_roles">Funciones administración de usuarios y roles.</string>
    <string name="administraci_n">ADMINISTRACIÓN</string>
    <string name="login_titulo">Mantenimiento\n Iniciar Sesión</string>
    <string name="ingresa_correo">Ingresa Correo</string>
    <string name="ingresa_contrase_a">Ingresa Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="lost_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="registrar_acci_n">Registrar acción</string>

    <!-- ROLES -->
    <string-array name="roles">
        <item>Jardinería</item>
        <item>Limpieza</item>
        <item>Mobiliario</item>
        <item>Dpto. de Electricista</item>
        <item>Centro de Computo</item>
        <item>Nave Industrial</item>
        <item>Taller de Electronica</item>
        <item>Lab. de Bioquímica</item>
        <item>Lab. de Ambiental</item>
        <item>Recursos Materiales</item>
    </string-array>

    <!-- AREAS -->
    <string-array name="areas">
        <item>Biblioteca</item>
        //a_biblioteca
        <item>Campo</item>
        //a_campo
        <item>Centro de Computo</item>
        //a_c_computo
        <item>Edificio de Investigadores</item>
        //a_e_investigadores
        <item>Edificio Principal</item>
        //a_e_principal
        <item>Edificio H</item>
        //a_e_h
        <item>Estacionamiento</item>
        //a_estacionamiento
        <item>Explanada</item>
        //a_explanada
        <item>Humedales</item>
        //a_humedales
        <item>Jardines</item>
        //a_jardines
        <item>Nave Industrial</item>
        //a_nave_industrial
        <item>Lab. de Ambiental</item>
        //a_l_ambiental
        <item>Lab. de Bioquímica</item>
        //a_l_bioquimica
        <item>Patio</item>
    </string-array>

    <!-- ESTADOS -->
    <string-array name="estados">
        <item>Solucionado</item>
        <item>No Solucionado</item>
        <item>Pendiente</item>
        <item>En revisión</item>
        <item>Indefinido</item>
    </string-array>
</resources>