<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".PerfilAdministrador">

    <LinearLayout
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="37dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:orientation="vertical"
            android:rowCount="1">

            <TextView
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/administraci_n"
                android:textSize="24sp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="58dp"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="1"
                android:src="@drawable/user"
                android:contentDescription="@string/administraci_n" />
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/funciones_administraci_n_de_usuarios_y_roles"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardviewImage" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/selecciona_un_usuario"
                        android:textSize="16sp"/>

                    <Spinner
                        android:id="@+id/spinnerUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginRight="24dp"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:maxLength="40"
                        android:padding="16dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/getProfileAppCompatButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/ic_buttom"
                        android:paddingLeft="64dp"
                        android:paddingRight="64dp"
                        android:text="@string/obtener_datos"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/asigna_o_modifica_datos"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/datos_b_sicos"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/nombreText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginRight="24dp"
                        android:autofillHints="@string/name"
                        android:background="@drawable/ic_field"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:maxLength="40"
                        android:padding="16dp" />

                    <EditText
                        android:id="@+id/direccionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:autofillHints="Dirección"
                        android:background="@drawable/ic_field"
                        android:drawableStart="@drawable/baseline_home_24"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:hint="@string/direcci_n"
                        android:inputType="textPersonName"
                        android:maxLength="40"
                        android:padding="16dp" />

                    <EditText
                        android:id="@+id/telefonoText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:autofillHints="Teléfono"
                        android:background="@drawable/ic_field"
                        android:drawableStart="@drawable/baseline_phone_android_24"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:hint="@string/tel_fono"
                        android:inputType="phone"
                        android:maxLength="40"
                        android:padding="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/datos_de_trabajo"
                        android:textSize="16sp"/>

                    <Spinner
                        android:id="@+id/spinnerRol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginRight="24dp"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:maxLength="40"
                        android:padding="16dp" />

                    <EditText
                        android:id="@+id/horarioEntradaText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:autofillHints="Dirección"
                        android:background="@drawable/ic_field"
                        android:drawableStart="@drawable/baseline_access_time_24"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:hint="@string/horario_de_entrada"
                        android:inputType="datetime|time"
                        android:maxLength="40"
                        android:padding="16dp" />

                    <EditText
                        android:id="@+id/horarioSalidaText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:autofillHints="Teléfono"
                        android:background="@drawable/ic_field"
                        android:drawableStart="@drawable/baseline_access_time_24"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:hint="@string/horario_de_salida"
                        android:inputType="datetime|time"
                        android:maxLength="40"
                        android:padding="16dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/saveProfileData"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/ic_buttom"
                        android:paddingLeft="64dp"
                        android:paddingRight="64dp"
                        android:layout_gravity="center"
                        android:text="@string/update_profile"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/updatePasswordTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:text="@string/change_password" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/deleteAccountTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:text="@string/delete_account" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>