<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adrianbl.mantenimiento_control.Autentificacion"
    android:background="#A9CCE3"
    android:textAlignment="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="388dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:text="@string/login_titulo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/mantenimiento"
        android:contentDescription="@string/login_titulo" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp">

        <LinearLayout
            android:id="@+id/authLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="@string/email"
                android:background="@drawable/ic_field"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/ingresa_correo"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="16dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/txt_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="@string/email"
                android:background="@drawable/ic_field"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/ingresa_contrase_a"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="16dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_buttom"
                android:fontFamily="monospace"
                android:text="@string/ingresar" />

            <Button
                android:id="@+id/btn_ingresar_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_buttom_white"
                android:drawableStart="@drawable/google"
                android:drawablePadding="-16dp"
                android:fontFamily="monospace"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="Ingresar con Google" />

            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_buttom"
                android:fontFamily="monospace"
                android:text="@string/registrar" />

            <Button
                android:id="@+id/btn_forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/ic_buttom"
                android:fontFamily="monospace"
                android:text="@string/lost_contrase_a" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>