<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".PerfilUsuario">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        app:cardCornerRadius="80dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bgProfileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/all"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/itsm" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ic_bg"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/signOutImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:clickable="true"
                android:contentDescription="@string/all"
                app:srcCompat="@drawable/ic_sign_out"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/adminsettingsImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="12dp"
                android:layout_marginTop="-32dp"
                android:clickable="true"
                android:contentDescription="@string/all"
                android:visibility="visible"
                app:srcCompat="@drawable/baseline_admin_panel_settings_24"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/correoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/user_email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/rolTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="ROL"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="80dp"
        app:layout_constraintBottom_toTopOf="@+id/cardviewImage"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardviewImage">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/all"
            app:srcCompat="@drawable/user" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewImage">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nombreEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:autofillHints="@string/name"
                    android:background="@drawable/ic_field"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLength="40"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/direccionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:autofillHints="Dirección"
                    android:background="@drawable/ic_field"
                    android:drawableStart="@drawable/baseline_home_24"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="Dirección"
                    android:inputType="textPersonName"
                    android:maxLength="40"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/telefonoEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:autofillHints="Teléfono"
                    android:background="@drawable/ic_field"
                    android:drawableStart="@drawable/baseline_phone_android_24"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="Teléfono"
                    android:inputType="textPersonName"
                    android:maxLength="40"
                    android:padding="16dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/saveProfileAppCompatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/ic_buttom"
                    android:paddingLeft="64dp"
                    android:paddingRight="64dp"
                    android:text="@string/update_profile"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/updatePasswordTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/change_password" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/deleteAccountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/delete_account" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>